# tactical-genius

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_agent.py  test_data_layer.py
tactical_genius/: __init__.py
tactical_genius/agent/: __init__.py  brain.py
tactical_genius/data/: __init__.py  client.py
tactical_genius/tools/: __init__.py  football.py
